# web-app

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/: .env-example  .gitignore  Cargo.toml  rustfmt.toml
backend/src/: lib.rs  main.rs
backend/src/database/: mod.rs  prelude.rs
backend/src/queires/: task_queries.rs  user_queries.rs
backend/src/routes/: create_task.rs  delete_task.rs  get_tasks.rs  middleware_message.rs  middleware_user_session.rs  mirror_body_json.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  partial_update_task.rs  partial_update_user.rs  query_params.rs  read_middleware_custom_header.rs  set_middleware_custom_header.rs  update_tasks.rs  users.rs  validate_json.rs
backend/src/utils/: app_error.rs  jwt.rs
frontend/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/assets/css/: styles.css
frontend/src/: main.rs
frontend/styles/: input.css
src/: app_state.rs  lib.rs  main.rs
src/database/: mod.rs
src/middleware/: require_authentication.rs
src/queires/: task_queries.rs
src/queries/: task_queries.rs  user_queries.rs
src/routes/: create_task.rs  delete_task.rs  get_json.rs  get_one_task.rs  get_tasks.rs  hello_world.rs  middleware_user_session.rs  mod.rs  partial_update_task.rs  partial_update_user.rs  path_variables.rs  set_middleware_custom_header.rs  update_tasks.rs  users.rs
src/routes/tasks/: create_task_extractor.rs  delete_task.rs  get_all_tasks.rs  get_one_task.rs  mod.rs  update_tasks.rs
src/routes/users/: create_user.rs  login.rs  logout.rs
src/to_do/: enums.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
src/utils/: app_error.rs  hash.rs  jwt.rs
