[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_with = "3.3.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
