[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
eyre = "0.6.8"
jsonwebtoken = "9.2.0"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["cors"] }
validator = { version = "0.17.0", features = ["derive"] }


[dev-dependencies]
clippy = "0.0.302"